# dt-edit-mcp

./: .gitignore  .mcp.json  FIX_PLAN_temperature_black_render.md  README.md  SKILL_PLAN.md  TESTING.md  darktable_editor_mcp.md  pyproject.toml
BUGS/: temperature_fresh_add_black_render.md
src/dt_edit_mcp/: exif.py  server.py  session.py  snapshots.py
src/dt_edit_mcp/codecs/: base.py  blend.py  colorbalancergb.py  exposure.py  iop_order.py  registry.py  temperature.py
src/dt_edit_mcp/colormatch/: analyze.py
src/dt_edit_mcp/compare/: composite.py  html_viewer.py
src/dt_edit_mcp/renderer/: cache.py  darktable_cli.py
src/dt_edit_mcp/xmp/: history.py  namespaces.py  parser.py
tests/: test_codec_colorbalancergb.py  test_codec_exposure.py  test_codec_temperature.py  test_temperature_fresh.py  test_xmp_roundtrip.py
